Criação do relatório de faturas vencidas com filtro por cliente e data da fatura

--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -12,5 +12,6 @@
     <li><%= link_to t('views.reports.aged_accounts_receivable'), "/#{I18n.locale}/reports/aged_accounts_receivable", :class => 'invoices_link' %></li>
     <li><%= link_to t('views.reports.item_sales'), "/#{I18n.locale}/reports/item_sales", :class => 'invoices_link' %></li>
     <li><%= link_to t('views.reports.invoice_detail'), "/#{I18n.locale}/reports/invoice_detail", :class => 'invoices_link' %></li>
+    <li><%= link_to t('views.reports.overdue_invoices'), "/#{I18n.locale}/reports/overdue_invoices", :class => 'invoices_link' %></li>
   </ol>
 </div><!--content_top-->
