--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -166,6 +166,7 @@
                       <li><%= active_link_to t("header.links.reports.aged_account_receivable"), "/#{I18n.locale}/reports/aged_accounts_receivable" %></li>
                       <li><%= active_link_to t("header.links.reports.item_sales"), "/#{I18n.locale}/reports/item_sales" %></li>
                       <li><%= active_link_to t("header.links.reports.invoice_detail"), "/#{I18n.locale}/reports/invoice_detail" %></li>
+                      <li><%= active_link_to t("header.links.reports.overdue_invoices"), "/#{I18n.locale}/reports/overdue_invoices" %></li>
                     </ul>
                   </div>
                 </li>
