--- a/app/views/dashboard/_recent_activity.html.erb
+++ b/app/views/dashboard/_recent_activity.html.erb
@@ -1,6 +1,6 @@
 <div class="activity_wrapper">
   <div class="dashboard_box">
-    <h1 class="small"><%= t('recent_activity') %></h1>
+    <h1 class="small"><%= t('views.dashboard.recent_activity') %></h1>
 
     <div class="grid_table activity">
       <table cellpadding="0" cellspacing="0" class="table table_listing invoice_listing">
